--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "App.js",
   "scripts": {
     "start": "node src/App.ts",
-    "build":"tsc -p .",
+    "build": "tsc -p .",
     "dev": "nodemon -L --config nodemon.json src/App.ts"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
